<resources>
    <string name="app_name">QuranOrbitTeacher</string>
    <string name="already_account">Already account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new account</string>
    <string name="forget_password">Forget password?</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="phone_number">Mobile Number</string>
    <string name="logout">Log Out</string>
    <string name="quran_orbit">Quran Orbit</string>
    <string name="online_academy">Online Academy</string>
    <string name="please_wait">"Please wait, getting started "</string>
    <string name="create_your_quran">Create your Quran Academy \n student account</string>
    <string name="please_fill_the">Please fill the form below to register.</string>
    <string name="student_id">Student ID:</string>
    <string name="creation_date">Creation Date:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="anyone">Anyone</string>
    <string name="next">Next</string>
    <string name="matric">Matric</string>
    <string name="intermediate">Intermediate</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="arabic">Arabic</string>
    <string name="pashto">Pashto</string>
    <string name="punjabi">Punjabi</string>
    <string name="farsi">Farsi</string>
    <string name="csr">CSR</string>
    <string name="first_name">First Name</string>
    <string name="father_name">Father Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="cnic_no">CNIC ID</string>
    <string name="cnic_Image">CNIC Images</string>
    <string name="front_image">Front Image</string>
    <string name="back_image">Back Image</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="lerom_ispum">Lorem ipsum dolar sit amit</string>
    <string name="trail_booking">Trail Booking</string>
    <string name="you_will_see">You will see trial bookings and requests here.</string>
    <string name="dashboard">Dashboard</string>
    <string name="csr_portal">CSR Portal</string>
    <string name="lorem_ipsum">Lorem ipsum dolar sit amit</string>
    <string name="pinding_trial">Pending Trials</string>
    <string name="view_report">View Report</string>
    <string name="daily_call">Daily Call</string>
    <string name="attendance">Attendance</string>
    <string name="date">Date</string>
    <string name="no_daily_call">No. of Dailed Calls</string>
    <string name="no_attended_call">No. of Attended calls(positive Response)</string>
    <string name="enter_attended">Enter Attended calls</string>
    <string name="drop_call">No. of Dropped Calls</string>
    <string name="enter_drop">Enter of Dropped calls</string>
    <string name="send_report">Send Report</string>
    <string name="send_call_report">Send Calls details to floor manager(FM).</string>
    <string name="shift_call">Call Scheduled</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="creat_new">Create New</string>
    <string name="age">Age</string>
    <string name="csr_id">CSR ID:</string>
    <string name="country">Country</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="required_teacher">Required Teacher Gender</string>
    <string name="select_your_prefered">Select your preferred gender for teacher</string>
    <string name="currency">Currency</string>
    <string name="select_your_currency">Select your currency</string>
    <string name="trail_date">Trial Date</string>
    <string name="select_your_trial_date"><![CDATA[Select your trial date & day.]]></string>
    <string name="skype_id">Skype ID</string>
    <string name="enter_skype_id">Enter your personal Skype ID</string>
    <string name="contact_no">Contact Number</string>
    <string name="your_contact">Your Contact Number</string>
    <string name="required_language">Required Language</string>
    <string name="select_your_language">Select your Language</string>
    <string name="class_start_time">Class Start Time</string>
    <string name="class_duration">Class Duration</string>
    <string name="select_your_class">Select class duration</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="schedule_call">Schedule Call</string>
    <string name="pending_schedule">Pending Call</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="calender">Calender</string>
    <string name="enter_call_date"><![CDATA[Enter Schedule Call Date & Time]]></string>
    <string name="remarks">Remarks</string>
    <string name="enter_your_feedback">Enter your Feedback</string>
    <string name="submit_schedule">Submit Schedule</string>
    <string name="call_counter">Call Counter</string>
    <string name="attended_call">Attended Call</string>
    <string name="select_option">Select Option</string>
    <string name="interested">Interested Course</string>
    <string name="non_interested">Non-Interested</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="required_course">Required Course</string>
    <string name="select_your_Required_course">Select your Required course</string>
    <string name="tajweed">Tajweed</string>
    <string name="hifez">Hifez</string>
    <string name="tarjama">Tarjama</string>
    <string name="pakistan">Pakistan</string>
    <string name="england">England</string>
    <string name="canada">Canada</string>
    <string name="japan">Japan</string>
    <string name="Rupees">Rupees</string>
    <string name="dollar">Dollar</string>
    <string name="pound">Pound</string>
    <string name="thirty">30 Minutes</string>
    <string name="forthy_five">45 Minutes</string>
    <string name="sixty">60 Minutes</string>
    <string name="ninty">90 Minutes</string>
    <string name="enter_your_qualification">Enter your qualification</string>
    <string name="shift_time">Select your shift time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request">Request</string>
    <string name="approved">Approved</string>
    <string name="no_data_yet">No data yet!</string>
    <string name="add_to_review">Add to review</string>
    <string name="course_registered">Course Register</string>
    <string name="show_detail">show Detail</string>
    <string name="account_type">Account Type</string>
    <string name="enter_your_account">Enter Your Account Type</string>
    <string name="Director_sale">Director Sale</string>
    <string name="floor_manager">Floor Manager</string>
    <string name="csr_report">CSR_Report</string>
    <string name="received_call">Received Call</string>
    <string name="client_info">Client Info</string>
    <string name="client_no">Client No :</string>
    <string name="client_name">Client Name</string>
    <string name="see_detail">See Details</string>
    <string name="last_name">Last Name</string>
    <string name="enter_interested_course">Enter Client Interest course</string>
    <string name="assign_teacher">Assign Teacher</string>
    <string name="enter_your_client_name">Enter your Client Name</string>
    <string name="pending_schedule_history">Pending Call History</string>
    <string name="csr_name">CSR Name</string>
    <string name="profile">Profile</string>
    <string name="student_name">Student Name</string>
    <string name="student_info">Student Info</string>
    <string name="cancel">Cancel</string>
    <string name="assign">Assign</string>
    <string name="assign_seven_days">Assign 7 days trial</string>
    <string name="assign_fifteen_days">Assign 15 days trial</string>
    <string name="assign_thirty_days">Assign 30 days trial</string>
    <string name="id_approved">ID approved!</string>
    <string name="report_send">Report Send</string>
    <string name="your_report_will_send">Student ID QO02450089 has been approved against your CSR ID 202301001 with trial assigned for 1 week</string>
    <string name="detial">Detials</string>
    <string name="teacher_id">Teacher ID :</string>
    <string name="time">Time :</string>
    <string name="okay">Okay</string>
    <string name="daily_report">Report</string>
    <string name="trial_booked">Trial Booked</string>
</resources>