<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:paddingVertical="10dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/student_name"
            android:textAllCaps="false"
            android:layout_marginTop="6dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile"
            app:layout_constraintStart_toStartOf="@+id/profile"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <TextView
            android:id="@+id/student_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/student_info"
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:textColor="@color/primary_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/student_name"
            app:layout_constraintStart_toStartOf="@+id/student_name"
            app:layout_constraintTop_toBottomOf="@+id/student_name" />

        <TextView
            android:id="@+id/teacher_assign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/assign_teacher"
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/student_info"
            app:layout_constraintStart_toStartOf="@+id/student_info"
            app:layout_constraintTop_toBottomOf="@+id/student_info" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_assign">

            <RadioButton
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/assign_seven_days"
                android:textAllCaps="false"
                android:buttonTint="@color/black"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/fifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/assign_fifteen_days"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/thirty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/assign_thirty_days"
                android:textAllCaps="false"
                android:buttonTint="@color/black"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

            <TextView
                android:id="@+id/assign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/seperate_btn"
                android:fontFamily="@font/montserrat_regular"
                android:paddingHorizontal="20dp"
                android:layout_marginEnd="7dp"
                android:paddingVertical="12dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/assign"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/seperate_btn"
                android:fontFamily="@font/montserrat_regular"
                android:paddingVertical="12dp"
                android:paddingHorizontal="20dp"
                android:layout_toStartOf="@+id/assign"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>