<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.schedule_call.Schedule_Call">

    <RelativeLayout
        android:id="@+id/relativeLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:padding="12dp"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/schedule_call"
            android:fontFamily="@font/montserrat_regular"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/montserrat_regular"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/caller_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:paddingVertical="5dp"
            android:background="@android:color/transparent"
            android:hint="@string/enter_your_client_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout71"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
        app:layout_constraintStart_toStartOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/caller_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:inputType="number"
            android:fontFamily="@font/montserrat_regular"
            android:background="@android:color/transparent"
            android:hint="@string/your_contact"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout72"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout71"
        app:layout_constraintStart_toStartOf="@+id/linearLayout71"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout71">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skype_id"
            android:fontFamily="@font/montserrat_regular"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/caller_skype_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:background="@android:color/transparent"
            android:hint="@string/enter_skype_id"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout73"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout72"
        app:layout_constraintStart_toStartOf="@+id/linearLayout72"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout72">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calender"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/caller_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingVertical="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:background="@android:color/transparent"
                android:hint="@string/enter_call_date"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/calender" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout731"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout73"
        app:layout_constraintStart_toStartOf="@+id/linearLayout73"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout73">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/caller_country_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingVertical="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:background="@android:color/transparent"
                android:hint="@string/enter_call_date"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_drop" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_color" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout7233"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout731"
        app:layout_constraintStart_toStartOf="@+id/linearLayout731"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout731">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/caller_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:background="@android:color/transparent"
            android:hint="@string/enter_your_feedback"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7321"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout7233"
        app:layout_constraintStart_toStartOf="@+id/linearLayout7233"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7233">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interested"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/interested_course_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingVertical="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:background="@android:color/transparent"
                android:hint="@string/enter_interested_course"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/interested_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_drop" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_color" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_caller_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/primary_color"
        android:elevation="6dp"
        android:paddingVertical="16dp"
        android:text="@string/submit_schedule"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7233" />


</androidx.constraintlayout.widget.ConstraintLayout>